# hw14_1

./: .coverage  .flake8  README.MD  README.md  pyproject.toml
src/: main.py
tests/: tests_main.py
